--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -4,39 +4,194 @@
     <!-- start: Content -->
 			<div id="content" class="span10">
 
+			<div class="row-fluid">
 
-			<ul class="breadcrumb">
-				<li>
-					<i class="icon-home"></i>
-					<a href="index.html">Home</a>
-					<i class="icon-angle-right"></i>
-				</li>
-				<li><a href="#">Dashboard</a></li>
-			</ul>
+			<div class="widget span6 blue" onTablet="span6" onDesktop="span6">
+				<h2><span class="glyphicons globe"><i></i></span>Personaje</h2>
+					<hr>
+                <div><img src="{{ asset('monigote.gif') }}" alt="Personaje" style="margin: 0 auto;"></div>
+			</div>
 
+			<div class="span6" onTablet="span6" onDesktop="span6">
 
-			<div class="row-fluid hideInIE8 circleStats">
+				<div class="row-fluid hideInIE8 circleStats">
 
-				<div class="span2" onTablet="span4" onDesktop="span2">
-                	<div class="circleStatsItemBox green">
-						<div class="header">Experiencia</div>
-						<span class="percent">nivel</span>
-						<div class="circleStat">
-                    		<span class="whiteCircle">1</span>
-						</div>
-						<div class="footer">
+						<div class="span6" onTablet="span6" onDesktop="span6">
+							<div class="circleStatsItemBox green">
+								<div class="header">Experiencia</div>
+								<span class="percent">nivel</span>
+								<div class="circleStat">
+									<span class="whiteCircle">1</span>
+								</div>
+								<div class="footer">
 							<span class="count">
 								<span class="number">0</span>
 								<span class="unit">exp.</span>
 							</span>
-							<span class="sep"> / </span>
+									<span class="sep"> / </span>
 							<span class="value">
 								<span class="number">100</span>
 								<span class="unit">exp.</span>
 							</span>
+								</div>
+							</div>
 						</div>
-                	</div>
+
+						<div class="span6" onTablet="span6" onDesktop="span6">
+							<div class="circleStatsItemBox green">
+								<div class="header">Ranking</div>
+								<span class="percent">Rango</span>
+								<div class="circleStat">
+									<span class="whiteCircle">1</span>
+								</div>
+								<div class="footer">
+								<span class="count">
+									<span class="number">0</span>
+									<span class="unit">pos.</span>
+								</span>
+									<span class="sep"> / </span>
+								<span class="value">
+									<span class="number">100</span>
+									<span class="unit">pos.</span>
+								</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="row-fluid">
+
+						<div class="box black span12" onTablet="span12" onDesktop="span12">
+
+				<div class="box-header">
+					<h2><i class="halflings-icon white list"></i><span class="break"></span>Ultimos combates</h2>
+					<div class="box-icon">
+						<a href="#" class="btn-minimize"><i class="halflings-icon white chevron-up"></i></a>
+						<a href="#" class="btn-close"><i class="halflings-icon white remove"></i></a>
+					</div>
 				</div>
+				<div class="box-content">
+					<ul class="dashboard-list metro">
+						<li>
+							<a href="#">
+								<i class="icon-arrow-up green"></i>
+								Lumilo
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="icon-arrow-down red"></i>
+								Romerox3
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="icon-arrow-down red"></i>
+								Renegade
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="icon-arrow-up green"></i>
+								Xter
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="icon-arrow-up green"></i>
+								Josuna
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="icon-arrow-down red"></i>
+								Boleoni
+							</a>
+						</li>
+					</ul>
+				</div>
+						</div><!--/span-->
+					</div>
+				</div>
+				</div>
+
+			<div class="row-fluid">
+
+
+				<div class="widget blue span12" onTablet="span12" onDesktop="span12">
+					<h2><span class="glyphicons globe"><i></i></span> Caracteristicas</h2>
+					<hr>
+					<div class="content">
+						<div class="verticalChart">
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>37%</span>
+									</div>
+								</div>
+								<div class="title">Fuerza</div>
+							</div>
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>16%</span>
+									</div>
+								</div>
+								<div class="title">Inteligencia</div>
+							</div>
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>12%</span>
+									</div>
+								</div>
+								<div class="title">Destreza</div>
+							</div>
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>9%</span>
+									</div>
+								</div>
+								<div class="title">Velocidad</div>
+							</div>
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>7%</span>
+									</div>
+								</div>
+								<div class="title">Critico</div>
+							</div>
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>6%</span>
+									</div>
+								</div>
+								<div class="title">Precisión</div>
+							</div>
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>5%</span>
+									</div>
+								</div>
+								<div class="title">Vitalidad</div>
+							</div>
+							<div class="singleBar">
+								<div class="bar">
+									<div class="value">
+										<span>8%</span>
+									</div>
+								</div>
+								<div class="title">Evasión</div>
+							</div>
+						</div>
+					</div>
+				</div><!--/span-->
+
+			</div>
 
 				{#<div class="span2" onTablet="span4" onDesktop="span2">
                 	<div class="circleStatsItemBox green">
