Creating with twig

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -21,7 +21,7 @@
 								<div class="header">Experiencia</div>
 								<span class="percent">nivel</span>
 								<div class="circleStat">
-									<span class="whiteCircle">1</span>
+									<span class="whiteCircle">{{ player.level }}</span>
 								</div>
 								<div class="footer">
 							<span class="count">
